// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadLink render component 1`] = `
<div
  className="mfui-download-link"
>
  <div
    className="mfui-download-link__icon"
  >
    <test-file-stub
      className="mfui-download-link__icon-svg"
    />
  </div>
  <div>
    <TextLink
      className="mfui-download-link__link"
      color="blue"
      download={true}
      href="href"
      underlineStyle="solid"
      underlineVisibility="hover"
    >
      text
    </TextLink>
    <p
      className="mfui-download-link__info"
    >
      PDF, 500 MB
    </p>
  </div>
</div>
`;

exports[`DownloadLink render with custom classes 1`] = `
<div
  className="mfui-download-link custom-classname root-class"
>
  <div
    className="mfui-download-link__icon"
  >
    <test-file-stub
      className="mfui-download-link__icon-svg"
    />
  </div>
  <div>
    <TextLink
      className="mfui-download-link__link link-class"
      color="blue"
      download={true}
      href="href"
      underlineStyle="solid"
      underlineVisibility="hover"
    >
      text
    </TextLink>
    <p
      className="mfui-download-link__info"
    >
      PDF, 500 MB
    </p>
  </div>
</div>
`;
